# mobydb-render-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  INTEGRATION.md  README.md  railway.json  rust-toolchain.toml
.github/workflows/: ci.yml
crates/lab-client/: Cargo.toml
crates/lab-client/src/: client.rs  error.rs  lib.rs  postgres.rs  types.rs
crates/lab-client/tests/: integration.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: auth.rs  config.rs  error.rs  http.rs  main.rs  mcp.rs  rate_limit.rs  tenancy.rs  tools.rs
crates/mobydb-client/: Cargo.toml
crates/mobydb-client/src/: lib.rs  merkle.rs  postgres.rs
crates/mobydb-client/tests/: merkle_integration.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: client.rs  error.rs  lib.rs  tools.rs  types.rs
crates/seed-data/: Cargo.toml
crates/seed-data/src/: main.rs
demo/: README.md  README_SESSION3.md  ai_observer_ticker.js  app.js  build.sh  compliance_button.js  compliance_overlay.js  cuneo_overlay.js  index.html  index.it.html  integration.html  lab_demo_button.js  lab_overlay.js  lab_tile_preview.js  lab_verify.js  liveness_indicators.js  map.html  setup_dev.sh  styles.css  twin_overlay.js  verify.js
docs/: ARCHITECTURE.md  INTEGRATION.md  ROADMAP.md  mobydb_scada_sidecar_spec.md  mobydb_scada_sidecar_spec_IT.md
fixtures/osm/: README.md  fetch.py  substations.geojson  transmission_lines.geojson
migrations/: 0001_initial_schema.sql  0002_render_app_role.sql
scripts/bench/: baseline_2026-04-21_railway.md  p99.mjs
scripts/clients/typescript/: client.ts  example.ts  package.json
scripts/ops/: hotfix_epoch0.sql  reseed_italy.sh
tests/: test_lab_verify.mjs  test_record.json
