[package]
name         = "lab-client"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }

[dependencies]
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
chrono           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
sqlx             = { workspace = true }
tokio            = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy  = { workspace = true }
