[package]
name         = "mcp-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
render-core      = { path = "../render-core" }
mobydb-client    = { path = "../mobydb-client" }
lab-client       = { path = "../lab-client" }

tokio            = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
schemars         = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
axum             = { workspace = true }
tower            = { workspace = true }
tower-http       = { workspace = true }
hyper            = { workspace = true }
dotenvy          = { workspace = true }
reqwest          = { workspace = true }
jsonwebtoken     = { workspace = true }
metrics          = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
futures          = { workspace = true }
