[package]
name         = "mobydb-client"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }

[dependencies]
render-core      = { path = "../render-core" }

async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
sqlx             = { workspace = true, features = ["migrate", "macros"] }
tokio            = { workspace = true }
hex              = { workspace = true }
blake3           = { workspace = true }
ed25519-dalek    = { workspace = true }
h3o              = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
