[package]
name         = "seed-data"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
publish      = false

[[bin]]
name = "seed-data"
path = "src/main.rs"

[dependencies]
render-core      = { path = "../render-core" }
mobydb-client    = { path = "../mobydb-client" }

tokio            = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx             = { workspace = true, features = ["migrate", "macros"] }
dotenvy          = { workspace = true }
hex              = { workspace = true }
blake3           = { workspace = true }
ed25519-dalek    = { workspace = true, features = ["rand_core"] }
h3o              = { workspace = true, features = ["geo"] }
geo              = "0.28"
rand             = "0.8"
